--- a/styles.css
+++ b/styles.css
@@ -1,325 +1,366 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; /* impede que o tamanho da cixa mude */
-    position: ;
-    
-}
+   *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box; /* impede que o tamanho da cixa mude */
+            
+            
+        }
 
-#top-fixed{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 64px;
-    gap: 10px;
-    opacity: 0px; 
-    background-color: #F3F7FF;
-}
+        #top-fixed{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 64px;
+            gap: 10px;
+            background-color: #F3F7FF;
+        }
 
- #frete-gratis h4{
-    width: 316px;
-    height: 64px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #F3F7FF;
-
-
-    font-family: Archivo;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 26.11px;
-    text-align: center;
-    color: #121214; 
-}
-
-#hero{
-width: 100%;
-height: 400px;
-background: linear-gradient(0deg, rgba(18, 18, 20, 0.75), rgba(18, 18, 20, 0.75)), url(Imagens/Jordan.png);
-padding-top:94px;
-}
-
-#titulo-hero{
-display: flex;
-flex-direction: column;
-width: 557px;
-height: 211px;
-margin-left: 352px;
-gap: 40px;
-opacity: 0px;
-}
-
-#caixa-vetor{
-display: flex;
-flex-direction: row;
-align-items: center;
-width: 203px;
-height: 48px;
-padding: 0px;
-gap: 8px;
-opacity: 0px;
-
-}
-
-#vetor{
-    display: flex;
-    width: 38.4px;
-    height: 35.94px;
-    top: 6px;
-    left: 4.42px;
-    gap: 0px;
-    opacity: 0px; 
-    color: #FFFFFF;
-
-}
-
-#frase-vetor{
-    display: flex;
-    width: 147px;
-    height: 26px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: Archivo;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 26.11px;
-    text-align: left;
-    color: #FFFFFF;
-}
-
-#descricao-hero{
-display: flex;
-flex-direction: column;
-width: 557px;
-height: 123px;
-gap: 20px;
-opacity: 0px;
-}
-
-#titulo{
-    width: 339px;
-    height: 35px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: Archivo;
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 34.82px;
-    text-align: left;
-    color: #FFFFFF;
-}
-
-#conteudo{
-    white-space: pre-line; /* serve para que a quebra do html funcione aqui */
-    width: 557px;
-    height: 68px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: Archivo;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 33.6px;
-    text-align: left;
-    color: #FFFFFF;
-}
+        #frete-gratis h4{
+            width: 316px;
+            height: 64px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #F3F7FF;
 
 
+            font-family: Archivo;
+            font-size: 24px;
+            font-weight: 500;
+            line-height: 26.11px;
+            text-align: center;
+            color: #121214; 
+        }
 
-#loja{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    width: 100%;
-    height: 1051px;
-    left: 352px;
-    top: 464px;
-    padding: 80px 0px 80px 0px;
-    gap: 72px;
-}
-
-#cabecalho-loja{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 593px;
-    height: 127px;
-    gap: 24px;   
-}
-
-#titulo-loja{
-width: 363px;
-height: 35px;
-font-family: Archivo;
-font-size: 32px;
-font-weight: 600;
-line-height: 34.82px;
-text-align: center;
-}
-
-#texto-loja{
-width: 593px;
-height: 68px;
-white-space: pre-line;
-font-family: Archivo;
-font-size: 24px;
-font-weight: 400;
-line-height: 33.6px;
-text-align: center;
-}
-
-#shop{
-display: flex;
-flex-wrap: wrap;
-justify-content: space-between;
-width: 1216px;
-height: 692px;
-gap: 32px;
-}
-
-.container{
-    width: calc(33.33% - 32px);
-    height: 326px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    text-align: left;
-}
-
-
-.tenis{
-    
-    width: 384px;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #F3F7FF;
-    ;
-    
-}
-
-.tenis img{
-    
-    width: 225px;
-    height: 135px;
-    margin: auto;
-}
-
-.descricao{
-    display: flex;
-    flex-direction: column;
-    width: 384px;
-    height: 52px;
-    gap: 12px; 
-    margin-top: 12px; 
-    text-align: left;
-    font-family: Archivo;       
-}
-
-.nome-tenis{
-    display: flex;
-    flex-direction: column;
-    width: 384px;
-    height: 23px;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 23.4px;
-    
-    color: #121214;
-    
-}
-
-.air-jordan{
-    display: flex;
-    flex-direction: column;
-    width: 117px;
-    height: 17px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 17.41px;
-    color:#7CA2F4;  
-}
-
-.preco {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end; /* Alinha o conteúdo na extremidade direita */
-    width: 107px;
-    height: 26px;
-    font-family: Space Grotesk;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 25.52px;
-    margin-top: 24px;
-    color: #121214;
-}
-
-/* Media Queries */
-@media (max-width: 1024px) {
-    #titulo-hero {
-        margin-left: 0;
+        #hero{
         width: 100%;
-        align-items: center;
-        text-align: center;
-    }
-    #descricao-hero {
-        width: 100%;
-        align-items: center;
-        text-align: center;
-    }
-    #shop {
-        justify-content: center;
-    }
-    .container {
-        width: calc(50% - 16px);
-    }
-}
+        height: 400px;
+        background: linear-gradient(0deg, rgba(18, 18, 20, 0.75), rgba(18, 18, 20, 0.75)), url(Imagens/Jordan.png);
+        padding-top:94px;
+        }
 
-@media (max-width: 768px) {
-    #hero {
-        height: auto;
-        padding-top: 64px;
-    }
-    #titulo-hero, #descricao-hero {
-        padding: 0 20px;
-    }
-    #shop {
-        gap: 16px;
-    }
-    .container {
-        width: calc(100% - 16px);
-    }
-}
+        #titulo-hero{
+        display: flex;
+        flex-direction: column;
+        width: 557px;
+        height: 211px;
+        margin-left: 352px;
+        gap: 40px;
+        }
 
-@media (max-width: 480px) {
-    #frete-gratis h4 {
-        font-size: 18px;
-    }
-    #titulo {
+        #caixa-vetor{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 203px;
+        height: 48px;
+        gap: 8px;
+        }
+
+        #vetor{
+            display: flex;
+            width: 38.4px;
+            height: 35.94px;
+            top: 6px;
+            left: 4.42px;
+
+            color: #FFFFFF;
+
+        }
+
+        #frase-vetor{
+            display: flex;
+            width: 147px;
+            height: 26px;
+        
+            font-family: Archivo;
+            font-size: 24px;
+            font-weight: 500;
+            line-height: 26.11px;
+            text-align: left;
+            color: #FFFFFF;
+        }
+
+        #descricao-hero{
+        display: flex;
+        flex-direction: column;
+        width: 557px;
+        height: 123px;
+        gap: 20px;
+        opacity: 0px;
+        }
+
+        #titulo{
+            width: 339px;
+            height: 35px;
+
+            font-family: Archivo;
+            font-size: 32px;
+            font-weight: 500;
+            line-height: 34.82px;
+            text-align: left;
+            color: #FFFFFF;
+        }
+
+        #conteudo{
+            white-space: pre-line; /* serve para que a quebra do html funcione aqui */
+            width: 557px;
+            height: 68px;
+            font-family: Archivo;
+            font-size: 24px;
+            font-weight: 400;
+            line-height: 33.6px;
+            text-align: left;
+            color: #FFFFFF;
+        }
+
+
+
+        #loja{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            width: 100%;
+            height: 1051px;
+            left: 352px;
+            top: 464px;
+            padding: 80px 0px 80px 0px;
+            gap: 72px;
+        }
+
+        #cabecalho-loja{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 593px;
+            height: 127px;
+            gap: 24px;   
+        }
+
+        #titulo-loja{
+        width: 363px;
+        height: 35px;
+        font-family: Archivo;
+        font-size: 32px;
+        font-weight: 600;
+        line-height: 34.82px;
+        text-align: center;
+        }
+
+        #texto-loja{
+        width: 593px;
+        height: 68px;
+        white-space: pre-line;
+        font-family: Archivo;
         font-size: 24px;
-    }
-    #conteudo {
-        font-size: 18px;
-    }
-    #titulo-loja {
-        font-size: 24px;
-    }
-    #texto-loja {
-        font-size: 18px;
-    }
-    .nome-tenis {
-        font-size: 16px;
-    }
-    .air-jordan {
-        font-size: 14px;
-    }
-    .preco {
-        font-size: 16px;
-    }
-}
+        font-weight: 400;
+        line-height: 33.6px;
+        text-align: center;
+        }
+
+        #shop{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        width: 1216px;
+        height: 692px;
+        gap: 32px;
+        }
+
+        .container{
+            width: calc(33.33% - 32px);
+            height: 326px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            text-align: left;
+        }
+
+
+        .tenis{
+            
+            width: 384px;
+            height: 200px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #F3F7FF;
+            ;
+            
+        }
+
+        .tenis img{
+            
+            width: 225px;
+            height: 135px;
+            margin: auto;
+        }
+
+        .descricao{
+            display: flex;
+            flex-direction: column;
+            width: 384px;
+            height: 52px;
+            gap: 12px; 
+            margin-top: 12px; 
+            text-align: left;
+            font-family: Archivo;       
+        }
+
+        .nome-tenis{
+            display: flex;
+            flex-direction: column;
+            width: 384px;
+            height: 23px;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 23.4px;
+            
+            color: #121214;
+            
+        }
+
+        .air-jordan{
+            display: flex;
+            flex-direction: column;
+            width: 117px;
+            height: 17px;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 17.41px;
+            color:#7CA2F4;  
+        }
+
+        .preco {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end; /* Alinha o conteúdo na extremidade direita */
+            width: 107px;
+            height: 26px;
+            font-family: Space Grotesk;
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 25.52px;
+            margin-top: 24px;
+            color: #121214;
+        }
+
+        /* Media Queries */
+
+        @media (max-width: 768px) {
+            #top-fixed{
+                height: 41px;
+            }
+
+            #frete-gratis h4{
+                width: 211px;
+                height: 17px;        
+                font-size: 16px;
+                line-height: 17.41px;           
+            }
+
+            #hero {
+                height: 350px;
+                padding-top: 41px;
+            }
+
+            #titulo-hero{
+                height: 152px;
+                align-items: ;
+            }
+
+            #caixa-vetor{
+                width: 142px;
+                height: 24px;
+            }
+
+            #vetor{
+                width: 24px;
+                height: 24px;
+                padding: 3px 2.59px 3.03px 2.21px;
+                }
+
+            #frase-vetor{
+                width: 110px;
+                height: 20px;
+                font-size: 18px;
+                line-height: 19.58px;
+                
+            }
+
+            #descricao-hero{
+                height: 88px;
+                gap: 12px;
+                
+            }
+
+            #titulo{
+                width: 254px;
+                height: 26px;
+                font-size: 24px;
+                line-height: 26.11px;
+                
+            }
+
+            #conteudo{
+                height: 50px;
+                font-size: 18px;
+                line-height: 25.2px;
+            }
+
+            #loja{
+                width: 704px;
+                Height: 1315px;
+                top: 391px;
+                left: 32px;
+                padding: 56px 0px 56px 0px;
+                gap: 40px;
+            }
+
+            #cabecalho-loja{
+                width: 520px;
+                height: 82px;
+                gap: 12px;
+            }
+
+            #titulo-loja{
+                width: 273px;
+                height: 26px;
+                font-size: 24px;
+                line-height:26.11px;
+            }
+
+            #texto-loja{
+                width: 520px;
+                height: 44px;
+                font-size: 16px;
+                line-height: 22.4px;
+            }
+
+            #shop{
+                width: 704px;
+                height: 1081px;
+                margin: 8px;
+            }
+
+            .container{
+                width: calc(50% - 24px);              
+                gap: 24px;
+                Height: 326px;
+                Gap: 24px;                
+            }
+
+            
+
+
+
+        }
+
+        @media (max-width: 480px) {
+
+        }
 
 
 
